--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,167 +1,105 @@
 .forSearch, .bag {
   background: #ecf0f1;
-  border-radius: 5px;
-}
+  border-radius: 5px; }
 
 .btn.focus,
 .btn:focus,
 .form-control:focus {
   border: none;
-  -webkit-box-shadow: none;
-          box-shadow: none;
+  box-shadow: none;
   outline: none;
-  background: transparent;
-}
+  background: transparent; }
 
 body {
   font-family: 'Roboto', sans-serif;
-  font-size: 10px;
-}
+  font-size: 10px; }
 
 .phone {
   margin-top: 30px;
-  text-align: center;
-}
-
-.phone > span {
-  padding-left: 15px;
-  margin-right: 15px;
-  position: relative;
-}
-
-.phone > span:before {
-  display: inline-block;
-  content: "";
-  width: 15px;
-  height: 15px;
-  background: url("../../build/img/sprite.png") 140px 45px;
-  position: absolute;
-  top: 3px;
-  left: -3px;
-}
-
-.phone > span > span {
-  font-weight: 700;
-}
+  text-align: center; }
+  .phone > span {
+    padding-left: 15px;
+    margin-right: 15px;
+    position: relative; }
+    .phone > span:before {
+      display: inline-block;
+      content: "";
+      width: 15px;
+      height: 15px;
+      background: url("../../build/img/sprite.png") 140px 45px;
+      position: absolute;
+      top: 3px;
+      left: -3px; }
+    .phone > span > span {
+      font-weight: 700; }
 
 .forSearch {
   padding: 0 10px 0 10px;
-  margin-top: 33px;
-}
-
-.forSearch input {
-  background: transparent;
-  border: none;
-}
-
-.forSearch input::-webkit-input-placeholder {
-  font-size: 14px;
-  color: #bdc3c7;
-}
-
-.forSearch input:-ms-input-placeholder {
-  font-size: 14px;
-  color: #bdc3c7;
-}
-
-.forSearch input::-ms-input-placeholder {
-  font-size: 14px;
-  color: #bdc3c7;
-}
-
-.forSearch input::placeholder {
-  font-size: 14px;
-  color: #bdc3c7;
-}
-
-.forSearch button i {
-  color: #bdc3c7;
-}
-
-.forSearch button i:hover {
-  color: black;
-}
+  margin-top: 33px; }
+  .forSearch input {
+    background: transparent;
+    border: none; }
+    .forSearch input::placeholder {
+      font-size: 14px;
+      color: #bdc3c7; }
+  .forSearch button i {
+    color: #bdc3c7; }
+    .forSearch button i:hover {
+      color: black; }
 
 .entrance {
   padding-top: 20px;
-  text-align: center;
-}
-
-.entrance a {
-  color: #95a5a6;
-  padding-left: 15px;
-  text-decoration: none;
-  margin-right: 10px;
-}
-
-.entrance a:hover {
-  color: black;
-}
-
-.entrance a:before {
-  display: inline-block;
-  content: "";
-  width: 15px;
-  height: 16px;
-  background: url("../../build/img/sprite.png") 155px 45px;
-  margin-right: 5px;
-}
-
-.entrance a + a:before {
-  width: 12px;
-  height: 17px;
-  background-position: -22px 22px;
-}
+  text-align: center; }
+  .entrance a {
+    color: #95a5a6;
+    padding: 0 15px;
+    text-decoration: none;
+    margin-right: 10px;
+    border-right: 2px solid #ecf0f1; }
+    .entrance a:hover {
+      color: black; }
+    .entrance a:before {
+      display: inline-block;
+      content: "";
+      width: 15px;
+      height: 16px;
+      background: url("../../build/img/sprite.png") 155px 45px;
+      margin-right: 5px; }
+    .entrance a + a:before {
+      width: 12px;
+      height: 17px;
+      background-position: -22px 22px; }
+    .entrance a + a {
+      border-right: none;
+      padding-left: 0; }
 
 .bag {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  flex-direction: row;
+  align-items: center;
   margin-top: 10px;
-  padding: 10px 0 10px 10px;
-}
+  padding: 10px 0 10px 10px; }
+  .bag a {
+    position: relative;
+    padding: 24px 25px;
+    background: #fff;
+    border-radius: 50%; }
+    .bag a:after {
+      content: "";
+      width: 24px;
+      height: 20px;
+      background: url("../../build/img/sprite.png") -45px 45px;
+      position: absolute;
+      top: 15px;
+      left: 12px; }
+  .bag p {
+    display: flex;
+    flex-direction: column;
+    padding-left: 10px;
+    margin: 0; }
+    .bag p span {
+      color: #2ecc71; }
+      .bag p span > span {
+        color: #34495e; }
 
-.bag a {
-  position: relative;
-  padding: 24px 25px;
-  background: #fff;
-  border-radius: 50%;
-}
-
-.bag a:after {
-  content: "";
-  width: 24px;
-  height: 20px;
-  background: url("../../build/img/sprite.png") -45px 45px;
-  position: absolute;
-  top: 15px;
-  left: 12px;
-}
-
-.bag p {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  padding-left: 10px;
-  margin: 0;
-}
-
-.bag p span {
-  color: #2ecc71;
-}
-
-.bag p span > span {
-  color: #34495e;
-}
 /*# sourceMappingURL=main.css.map */
