--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -62,9 +62,9 @@ body{
 	text-align: center;
 	a{
 		color: #95a5a6;;
-		padding: 0 15px;
+		padding: 0 10px;
 		text-decoration: none;
-		margin-right: 10px;
+		
 		border-right: 2px solid #ecf0f1;
 		&:hover{
 			color: black;
@@ -85,7 +85,7 @@ body{
 		}
 		+a{
 			border-right: none;
-			padding-left: 0;
+			padding-right: 17px;
 		}
 	}
 }
