--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -2,6 +2,9 @@
 	background: #ecf0f1;
 	border-radius: 5px;
 }
+button:focus{
+	outline: none;
+}
 .btn.focus,
 .btn:focus,
 .form-control:focus {
@@ -9,6 +12,9 @@
 	box-shadow: none;
 	outline: none;
 	background: transparent;
+}
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover{
+	color: #fff;
 }
 body{
 	font-family: 'Roboto', sans-serif;
@@ -100,14 +106,9 @@ body{
 	a{
 
 	position: relative;
-	// &:before{
-	// content:"";
 	padding: 24px 25px;
 	background: #fff;
 	border-radius: 50%;
-	// position:absolute;
-	// top: 6px;
-	// left: 8px;
 	
 	&:after{
 	content:"";
@@ -133,5 +134,50 @@ body{
 		}
 	}
  }
-
 }
+.forNav{
+	background: #34495e;
+	margin-top: 20px;
+	.navbar-nav{
+	justify-content: space-between;
+	}
+}
+.navbar-light .navbar-nav .nav-link{
+	text-align: center;
+	color: #fff;
+	position: relative;
+}
+.navbar-light .navbar-nav .nav-link:hover{
+	color: #2ecc71;
+}
+//листик в меню
+.nav-item .nav-link:after{
+		content: "";
+		width: 10px;
+		height: 11px;
+		background: url('../../build/img/sprite.png') -183px 45px;
+		position: absolute;
+		right: -10px;
+		top: 12px;
+}
+//последний пункт меню
+.navbar-nav>.nav-item+.nav-item+.nav-item+.nav-item+.nav-item+.nav-item+.nav-item+.nav-item+.nav-item .nav-link:after{
+	background: transparent;
+}
+ //карусель top
+
+ .banerTop .carousel-caption{
+	 right: 0;
+	 bottom: 215px;
+	 top: 0;
+	 color: #34495e;
+	 h5{
+		font-size: 44px;
+		font-weight: 700;
+		
+	 }
+	 p{
+		 font-size: 30px;
+		 font-weight: 300;
+	 }
+ }
