--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13,7 +13,8 @@ button:focus {
   outline: none;
   background: transparent; }
 
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
+.navbar-light .navbar-nav .nav-link:focus,
+.navbar-light .navbar-nav .nav-link:hover {
   color: #fff; }
 
 body {
@@ -133,16 +134,104 @@ body {
 .navbar-nav > .nav-item + .nav-item + .nav-item + .nav-item + .nav-item + .nav-item + .nav-item + .nav-item + .nav-item .nav-link:after {
   background: transparent; }
 
-.banerTop .carousel-caption {
-  right: 0;
-  bottom: 215px;
-  top: 0;
-  color: #34495e; }
-  .banerTop .carousel-caption h5 {
-    font-size: 44px;
-    font-weight: 700; }
-  .banerTop .carousel-caption p {
-    font-size: 30px;
-    font-weight: 300; }
+.banerTop {
+  background: url("../../build/img/keks.png") no-repeat;
+  background-size: cover;
+  position: relative; }
+  .banerTop:before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: rgba(46, 204, 113, 0.4);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0; }
+  .banerTop > div {
+    padding: 20px 0; }
+  .banerTop .carousel {
+    height: fit-content; }
+  .banerTop .carousel-caption {
+    right: 0;
+    bottom: 215px;
+    top: 0;
+    color: #34495e; }
+    .banerTop .carousel-caption h5 {
+      font-size: 44px;
+      font-weight: 700; }
+    .banerTop .carousel-caption p {
+      font-size: 30px;
+      font-weight: 300; }
+  .banerTop .catalog {
+    background: #ecf0f1;
+    border-radius: 5px;
+    padding: 0; }
+    .banerTop .catalog h3 {
+      color: #fff;
+      font-weight: 700;
+      text-align: center;
+      font-size: 20px;
+      line-height: 78px;
+      background: #2ecc71;
+      border-radius: 5px 5px 0 0;
+      margin: 0; }
+      .banerTop .catalog h3:before {
+        display: inline-block;
+        content: "";
+        width: 21px;
+        height: 24px;
+        background: url("../../build/img/sprite.png") 292px 45px; }
+    .banerTop .catalog ul {
+      list-style: none;
+      padding: 0;
+      margin: 0; }
+      .banerTop .catalog ul a {
+        font-size: 16px;
+        color: #34495e;
+        text-decoration: none;
+        padding-left: 7px; }
+        .banerTop .catalog ul a:before {
+          content: "\2022";
+          color: #2ecc71;
+          font-weight: bold;
+          display: inline-block;
+          width: 2px;
+          margin-right: 10px; }
+    .banerTop .catalog li {
+      border-bottom: #2ecc71 1px solid;
+      padding: 21px 15px;
+      position: relative; }
+      .banerTop .catalog li:last-child {
+        border: none;
+        border-radius: 0 0 5px 5px; }
+      .banerTop .catalog li:hover {
+        background: #34495e; }
+        .banerTop .catalog li:hover a {
+          color: #fff; }
+    .banerTop .catalog .liMenu:hover .ulMenu {
+      display: block; }
+    .banerTop .catalog .liMenu .ulMenu {
+      position: absolute;
+      left: 100%;
+      top: 0;
+      z-index: 5;
+      background: #2ecc71;
+      width: fit-content;
+      display: none; }
+      .banerTop .catalog .liMenu .ulMenu li {
+        border-bottom: #fff 1px solid;
+        padding: 19px 15px; }
+        .banerTop .catalog .liMenu .ulMenu li:hover {
+          background: transparent; }
+        .banerTop .catalog .liMenu .ulMenu li a {
+          color: #fff; }
+          .banerTop .catalog .liMenu .ulMenu li a:before {
+            content: "\2022";
+            color: #fff;
+            font-weight: bold;
+            display: inline-block;
+            width: 2px;
+            margin-right: 10px; }
 
 /*# sourceMappingURL=main.css.map */
