--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,10 +1,12 @@
-%background-border{
+%background-border {
 	background: #ecf0f1;
 	border-radius: 5px;
 }
-button:focus{
+
+button:focus {
 	outline: none;
 }
+
 .btn.focus,
 .btn:focus,
 .form-control:focus {
@@ -13,171 +15,328 @@ button:focus{
 	outline: none;
 	background: transparent;
 }
-.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover{
+
+.navbar-light .navbar-nav .nav-link:focus,
+.navbar-light .navbar-nav .nav-link:hover {
 	color: #fff;
 }
-body{
+
+body {
 	font-family: 'Roboto', sans-serif;
 	font-size: 14px;
 }
-.phone{
+
+.phone {
 	margin-top: 30px;
 	text-align: center;
-	>span{
+
+	>span {
 		padding-left: 15px;
 		margin-right: 15px;
 		position: relative;
-		&:before{
-		display: inline-block;
-		content:"";
-		width: 15px;
-		height: 15px;
-		background: url('../../build/img/sprite.png') 140px 45px;
-		position: absolute;
-		top: 3px;
-		left: -3px;
+
+		&:before {
+			display: inline-block;
+			content: "";
+			width: 15px;
+			height: 15px;
+			background: url('../../build/img/sprite.png') 140px 45px;
+			position: absolute;
+			top: 3px;
+			left: -3px;
 		}
-		>span{
+
+		>span {
 			font-weight: 700;
 		}
 	}
 }
-.forSearch{
+
+.forSearch {
 	@extend %background-border;
 	padding: 0 10px 0 10px;
 	margin-top: 33px;
-	input{
-		background:transparent;
+
+	input {
+		background: transparent;
 		border: none;
-		&::placeholder{
+
+		&::placeholder {
 			font-size: 14px;
 			color: #bdc3c7;
 		}
 	}
-	button{
-		i{
-		color: #bdc3c7;
-		&:hover{
-		color: black;
+
+	button {
+		i {
+			color: #bdc3c7;
+
+			&:hover {
+				color: black;
 			}
 		}
 	}
 }
-.entrance{
+
+.entrance {
 	padding-top: 20px;
 	text-align: center;
-	a{
-		color: #95a5a6;;
+
+	a {
+		color: #95a5a6;
+		;
 		padding: 0 10px;
 		text-decoration: none;
-		
+
 		border-right: 2px solid #ecf0f1;
-		&:hover{
+
+		&:hover {
 			color: black;
 		}
-		&:before{
+
+		&:before {
 			display: inline-block;
 			content: "";
 			width: 15px;
-			height:16px;
+			height: 16px;
 			background: url('../../build/img/sprite.png') 155px 45px;
 			margin-right: 5px;
 		}
-		+a:before{
+
+		+a:before {
 			width: 12px;
 			height: 17px;
 			background-position: -22px 22px;
-			
+
 		}
-		+a{
+
+		+a {
 			border-right: none;
 			padding-right: 17px;
 		}
 	}
 }
-.bag{
-	
+
+.bag {
+
 	@extend %background-border;
 	display: flex;
 	flex-direction: row;
 	align-items: center;
 	margin-top: 10px;
 	padding: 10px 0 10px 10px;
-	a{
 
-	position: relative;
-	padding: 24px 25px;
-	background: #fff;
-	border-radius: 50%;
-	
-	&:after{
-	content:"";
-	width: 24px;
-	height:20px;
-	background: url('../../build/img/sprite.png') -45px 45px;
-	position:absolute;
-	top: 15px;
-	left: 12px;	
+	a {
+
+		position: relative;
+		padding: 24px 25px;
+		background: #fff;
+		border-radius: 50%;
+
+		&:after {
+			content: "";
+			width: 24px;
+			height: 20px;
+			background: url('../../build/img/sprite.png') -45px 45px;
+			position: absolute;
+			top: 15px;
+			left: 12px;
+		}
+
 	}
-	
- }
- p{
- 	display: flex;
-	flex-direction: column;
-	padding-left: 10px;
-	margin: 0;
- 	span{
-		color: #2ecc71;
-		
-		>span{
-			 color: #34495e;
+
+	p {
+		display: flex;
+		flex-direction: column;
+		padding-left: 10px;
+		margin: 0;
+
+		span {
+			color: #2ecc71;
+
+			>span {
+				color: #34495e;
+			}
 		}
 	}
- }
 }
-.forNav{
+
+.forNav {
 	background: #34495e;
 	margin-top: 20px;
-	.navbar-nav{
-	justify-content: space-between;
+
+	.navbar-nav {
+		justify-content: space-between;
 	}
 }
-.navbar-light .navbar-nav .nav-link{
+
+.navbar-light .navbar-nav .nav-link {
 	text-align: center;
 	color: #fff;
 	position: relative;
 }
-.navbar-light .navbar-nav .nav-link:hover{
+
+.navbar-light .navbar-nav .nav-link:hover {
 	color: #2ecc71;
 }
+
 //листик в меню
-.nav-item .nav-link:after{
-		content: "";
-		width: 10px;
-		height: 11px;
-		background: url('../../build/img/sprite.png') -183px 45px;
-		position: absolute;
-		right: -10px;
-		top: 12px;
+.nav-item .nav-link:after {
+	content: "";
+	width: 10px;
+	height: 11px;
+	background: url('../../build/img/sprite.png') -183px 45px;
+	position: absolute;
+	right: -10px;
+	top: 12px;
 }
+
 //последний пункт меню
-.navbar-nav>.nav-item+.nav-item+.nav-item+.nav-item+.nav-item+.nav-item+.nav-item+.nav-item+.nav-item .nav-link:after{
+.navbar-nav>.nav-item+.nav-item+.nav-item+.nav-item+.nav-item+.nav-item+.nav-item+.nav-item+.nav-item .nav-link:after {
 	background: transparent;
 }
- //карусель top
 
- .banerTop .carousel-caption{
-	 right: 0;
-	 bottom: 215px;
-	 top: 0;
-	 color: #34495e;
-	 h5{
-		font-size: 44px;
-		font-weight: 700;
-		
-	 }
-	 p{
-		 font-size: 30px;
-		 font-weight: 300;
-	 }
- }
+.banerTop {
+	background: url('../../build/img/keks.png') no-repeat;
+	background-size: cover;
+	position: relative;
+
+	&:before {
+		content: "";
+		width: 100%;
+		height: 100%;
+		background: rgba(46, 204, 113, .4);
+		position: absolute;
+		top: 0;
+		bottom: 0;
+		left: 0;
+		right: 0;
+	}
+
+	>div {
+		padding: 20px 0;
+	}
+	.carousel{
+		height: fit-content;
+	}
+	.carousel-caption {
+		right: 0;
+		bottom: 215px;
+		top: 0;
+		color: #34495e;
+
+		h5 {
+			font-size: 44px;
+			font-weight: 700;
+
+		}
+
+		p {
+			font-size: 30px;
+			font-weight: 300;
+		}
+	}
+
+	.catalog {
+		background: #ecf0f1;
+		border-radius: 5px;
+		padding: 0;
+
+		h3 {
+			color: #fff;
+			font-weight: 700;
+			text-align: center;
+			font-size: 20px;
+			line-height: 78px;
+			background: #2ecc71;
+			border-radius: 5px 5px 0 0;
+			margin: 0;
+			&:before{
+				display: inline-block;
+				content: "";
+				width: 21px;
+				height: 24px;
+				background: url('../../build/img/sprite.png') 292px 45px;
+			}
+		}
+
+		ul {
+			list-style: none;
+			padding: 0;
+			margin: 0;
+
+			a {
+				font-size: 16px;
+				color: #34495e;
+				text-decoration: none;
+				padding-left: 7px;
+
+				&:before {
+					content: "\2022";
+					color: #2ecc71;
+					font-weight: bold;
+					display: inline-block;
+					width: 2px;
+					margin-right: 10px;
+				}
+
+			}
+		}
+
+		li {
+			border-bottom: #2ecc71 1px solid;
+			padding: 21px 15px;
+			position: relative;
+
+			&:last-child {
+				border: none;
+				border-radius: 0 0 5px 5px;
+			}
+
+			&:hover {
+				background: #34495e;
+
+				a {
+					color: #fff;
+				}
+			}
+		}
+
+		.liMenu {
+			&:hover .ulMenu{
+				display: block;
+			}
+			.ulMenu {
+				position: absolute;
+				left: 100%;
+				top: 0;
+				z-index: 5;
+				background: #2ecc71;
+				width: fit-content;
+				display: none;
+
+				li {
+					border-bottom: #fff 1px solid;
+					padding: 19px 15px;
+					&:hover{
+						background: transparent;
+					}
+
+					a {
+						color: #fff;
+
+						&:before {
+							content: "\2022";
+							color: #fff;
+							font-weight: bold;
+							display: inline-block;
+							width: 2px;
+							margin-right: 10px;
+						}
+					}
+				}
+			}
+
+		}
+	}
+}
